[package]
name = "rsomics-graph-shortest-paths"
version = "0.2.1"
description = "Shortest-path metrics for undirected graphs — value-exact networkx equivalent (diameter, radius, average, eccentricity, center, periphery, barycenter, single-source BFS)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-graph-shortest-paths"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["shortest-path", "graph", "network", "bioinformatics"]
readme = "README.md"

[[bin]]
name = "rsomics-graph-shortest-paths"
path = "src/main.rs"

[lib]
name = "rsomics_graph_shortest_paths"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "shortest_paths"
harness = false
